WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206552
REGRESSION (
r254856
?): [Win] http/tests/security/same-origin-websql-blocked.html and 2 fast/dom/Window/window-function-* tests failing
https://bugs.webkit.org/show_bug.cgi?id=206552
Summary
REGRESSION (r254856?): [Win] http/tests/security/same-origin-websql-blocked.h...
Ryan Haddad
Reported
2020-01-21 13:49:13 PST
The following layout tests are failing on Windows: fast/dom/Window/window-function-frame-getter-precedence.html fast/dom/Window/window-function-name-getter-precedence.html http/tests/security/same-origin-websql-blocked.html
https://build.webkit.org/results/Apple%20Win%2010%20Release%20(Tests)/r254862%20(4692)/results.html
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fdom%2FWindow%2Fwindow-function-frame-getter-precedence.html&test=fast%2Fdom%2FWindow%2Fwindow-function-name-getter-precedence.html&test=http%2Ftests%2Fsecurity%2Fsame-origin-websql-blocked.html
The diffs for the fast/dom/Window tests looks like this: -PASS: typeof window.openDatabase should be function and is. +FAIL: typeof window.openDatabase should be function but instead is undefined The websql test is this: --- /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/same-origin-websql-blocked-expected.txt +++ /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/same-origin-websql-blocked-actual.txt @@ -1,4 +1,3 @@ -CONSOLE MESSAGE: line 5: Web SQL is deprecated. Please use IndexedDB instead. This iframe should return a security error: @@ -6,4 +5,4 @@ -------- Frame: '<!--frame1-->' -------- -SecurityError +UnknownError
Attachments
Patch for landing
(1.33 KB, patch)
2020-01-21 14:13 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-01-21 13:55:07 PST
The tests passed as of
r254853
, failed as of
r254862
. This change looks like it could be related: Disable WebSQL everywhere by default except in tests
https://bugs.webkit.org/show_bug.cgi?id=204907
https://trac.webkit.org/changeset/254856
Sihui Liu
Comment 2
2020-01-21 14:13:43 PST
Created
attachment 388348
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2020-01-21 14:57:06 PST
Comment on
attachment 388348
[details]
Patch for landing Clearing flags on attachment: 388348 Committed
r254885
: <
https://trac.webkit.org/changeset/254885
>
WebKit Commit Bot
Comment 4
2020-01-21 14:57:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-01-21 14:58:19 PST
<
rdar://problem/58775033
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug