REGRESSION (r254856?): [Win] http/tests/security/same-origin-websql-blocked.html and 2 fast/dom/Window/window-function-* tests failing https://bugs.webkit.org/show_bug.cgi?id=206552

Unreviewed fix after r254856. r254856 wanted to enable WebSQL on layout tests but enableWebSQL was set to false.


* DumpRenderTree/TestOptions.h:


Canonical link: https://commits.webkit.org/219620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254885 268f45cc-cd09-0410-ab3c-d52691b4dbfc